feat: implement cards opening

--- a/index.html
+++ b/index.html
@@ -29,19 +29,19 @@
         <button>Замешать колоду</button>
         <div class="play-box hidden">
             <div class="state-box">
-                <span>Этап 1</span>
+                <span id="first">Этап 1</span>
                 <div class="row">
                     <div class="circle green first"></div>
                     <div class="circle brown first"></div>
                     <div class="circle blue first"></div>
                 </div>
-                <span>Этап 2</span>
+                <span id="second">Этап 2</span>
                 <div class="row">
                     <div class="circle green second"></div>
                     <div class="circle brown second"></div>
                     <div class="circle blue second"></div>
                 </div>
-                <span>Этап 3</span>
+                <span id="third">Этап 3</span>
                 <div class="row">
                     <div class="circle green third"></div>
                     <div class="circle brown third"></div>
